# CrunchSnaps

./: .readthedocs.yaml  CrunchSnaps.py  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml  requirements.txt  setup.py  simple_default_run.py  snapshot_tasks.py  tasks.py  tasks.py~
.github/workflows/: python-package.yml
docs/: api.rst  camera_movies.rst  conf.py  custom_tasks.rst  generate_examples.sh  index.rst  installation.rst  sinkvis2.rst
docs/_build/: .buildinfo  api.html  custom_tasks.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  sinkvis2.html
docs/_build/.doctrees/: api.doctree  custom_tasks.doctree  environment.pickle  index.doctree  installation.doctree  sinkvis2.doctree
docs/_build/_sources/: api.rst.txt  custom_tasks.rst.txt  installation.rst.txt  sinkvis2.rst.txt
docs/_static/examples/.maps/: Slice_Entropy_-5949129595068789531.npz
movie_scripts/: cool.py  demo.py  simple_default_run.py  zoom.py
scripts/: SinkVis2.py  cool.py  demo.py  demo_cubemap.py  make_movie_from_camerafile.py  run_vis.sh  simple_default_run.py  single_snap_cubemap.py  stellarscape_movie.py  zoom.py  zoom_cubemap.py  zoom_in_stellarscape_movie.py
src/CrunchSnaps/: CrunchSnaps.py  __init__.py  amuse_fresco.py  misc_functions.py  sinkvis2.py  snapshot_tasks.py
src/CrunchSnaps/data/WFPC_II_WFC3/: b01.fits  b03.fits  i01.fits  r03.fits  u00.fits  u03.fits  v00.fits  v01.fits  v02.fits  v03.fits
src/CrunchSnaps/realistic_stars/: __init__.py  realistic_stars.py
src/CrunchSnaps/realistic_stars/psf/WFPC_II_WFC3/: b00.fits  (+9 more)
